2007-09-12  Jan Patera <patera@users.sourceforge.net>

	* Enhancements to Canon makernote parsers submitted by Thorsten Kukuk
	* Added Dutch and Swedish translations, updated Slovak translation

2007-08-16  Jan Patera <patera@users.sourceforge.net>

	* exif-mnote-data-olympus.c: Fix of bugs #1773810, #1774626, gnome bug #466044:
	  Some Olympus files have main IFD in MM byte order as well as makernote, but
	  makernote order was guessed wrongly. Bug introduced when fixing bug #1525770.

2007-06-25  Jan Patera <patera@users.sourceforge.net>

	* Endianess of Nikon V1 makernotes is now guessed, it might not
	  be the same as of the main IFD

2007-05-21  Jan Patera <patera@users.sourceforge.net>

	* First version of Czech localization (cs.po)
	* First version of Slovak localization (sk.po), submitted by Ivan Masar

2007-05-15  Jan Patera <patera@users.sourceforge.net>

	* Windows XP Explorer writes Title, Comment, Author, Keywords, and
	  Subject metadata into proprietary UTF16-encoded tags 0x9c9b-0x9c9f
	  in IFD0. We now recognize them, exif_entry_get_value returns their value
	  converted to UTF8. BTW, Explorer corrupts makernotes using offsets
	  relative to IFD0...

2007-05-13  Jan Patera <patera@users.sourceforge.net>

	* Added support of a new Pentax makernote type, plus another makernote
	  type shared by Pentax & Casio
	* Updated several tags
	* Fixed some "security" sanity checks for broken entries

2007-05-09  Jan Patera <patera@users.sourceforge.net>

	* Added support for Olympus S760 & S770 makernote (bug #1703284)
	* Fixed crashes when looking up invalid values (bug #1457501)
	* Added heuristics (bug #1525770): mismatching Olympus makernote
	  in big endian when the rest is in little endian is detected
	  to prevent crashes
	* Added option EXIF_DATA_OPTION_DONT_CHANGE_MAKER_NOTE to prevent
	  modification of maker notes
	* EXIF_DATA_OPTION_IGNORE_UNKNOWN_TAGS propagated to Canon makernote
	  (Bug #1617991)
	* Updated several tags
	* Updated translations
