@@ -35,7 +35,7 @@ struct _ExifLog {
 	ExifMem *mem;
 };
 
-static struct {
+static const struct {
 	ExifLogCode code;
 	const char *title;
 	const char *message;
@@ -127,6 +127,10 @@ exif_log_set_func (ExifLog *log, ExifLogFunc func, void *data)
 	log->data = data;
 }
 
+#ifdef NO_VERBOSE_TAG_STRINGS
+/* exif_log forms part of the API and can't be commented away */
+#undef exif_log
+#endif
 void
 exif_log (ExifLog *log, ExifLogCode code, const char *domain,
 	  const char *format, ...)
