@@ -55,12 +55,22 @@ typedef void (* ExifLogFunc) (ExifLog *log, ExifLogCode, const char *domain,
  */
 void     exif_log_set_func (ExifLog *log, ExifLogFunc func, void *data);
 
+#ifndef NO_VERBOSE_TAG_STRINGS
 void     exif_log  (ExifLog *log, ExifLogCode, const char *domain,
 		    const char *format, ...)
 #ifdef __GNUC__
 			__attribute__((__format__(printf,4,5)))
 #endif
 ;
+#else
+#if defined(__STDC_VERSION__) &&  __STDC_VERSION__ >= 199901L
+#define exif_log(...) do { } while (0)
+#elif defined(__GNUC__)
+#define exif_log(x...) do { } while (0)
+#else
+#define exif_log (void)
+#endif
+#endif
 
 void     exif_logv (ExifLog *log, ExifLogCode, const char *domain,
 		    const char *format, va_list args);
